Fixing bugs,fixing panel view, change logo

--- a/nginx/virtual_host/02_nginx_filebrowser.conf
+++ b/nginx/virtual_host/02_nginx_filebrowser.conf
@@ -1,8 +1,8 @@
 server {
-    listen 8081 ;
+    listen 8081;
     resolver 127.0.0.11 valid=10s ipv6=off;
-
     server_name _;
+
     location / {
         auth_request /auth;
         proxy_pass http://filebrowser:8081;
@@ -11,16 +11,17 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout	240;
     }
 
     location /auth {
         set $auth_token "Bearer $cookie_authenticationToken";
-        internal;
-        proxy_pass http://cron_backend:8080/api/is-authenticated;
+        proxy_pass http://panel:8080/api/is-authenticated;
         proxy_pass_request_body off;
         proxy_set_header Content-Length "";
         proxy_set_header X-Original-URI $request_uri;
         proxy_set_header Authorization $auth_token;
+        proxy_read_timeout	240;
     }
 
 }
