Removing nginx conf files, adding GitHub build files, changing Dockerfile

--- a/nginx/virtual_host/01_nginx_frontend.conf
+++ b/nginx/virtual_host/01_nginx_frontend.conf
@@ -6,3 +6,93 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
 }
+
+
+set $crondata_backend http://panel:8080;
+set $crondata_filebrowser http://filebrowser:8081;
+set $crondata_alert_manager http://alertmanager:9093;
+set $crondata_prometheus http://prometheus:9090;
+set $crondata_grafana http://grafana:3000;
+set $crondata_backend_auth http://panel:8080/api/is-authenticated;
+
+
+   location /api {
+        proxy_pass  $crondata_backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 900;
+	}
+
+	location /prometheus {
+              auth_request /kill;
+              proxy_pass $crondata_prometheus;
+              proxy_http_version 1.1;
+              proxy_set_header Upgrade $http_upgrade;
+              proxy_set_header Connection 'upgrade';
+              proxy_set_header Host $host;
+              proxy_cache_bypass $http_upgrade;
+              proxy_read_timeout	240;
+  }
+
+	location /management {
+          proxy_pass  $crondata_backend;
+          proxy_set_header Host $host;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+          proxy_set_header X-Forwarded-Proto $scheme;
+          proxy_read_timeout 900;
+  }
+
+
+   location /health {
+        proxy_pass $crondata_filebrowser;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+   }
+
+    location /kill {
+        set $auth_token "Bearer $cookie_authenticationToken";
+        proxy_pass $crondata_backend_auth;
+        proxy_http_version 1.1;
+        proxy_pass_request_body off;
+        proxy_set_header Authorization $auth_token;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+    }
+
+    location /rules {
+        auth_request /kill;
+        proxy_pass $crondata_filebrowser;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location /alert {
+        auth_request /kill;
+        proxy_pass $crondata_alert_manager;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_read_timeout	240;
+    }
+
+     location /dashboard {
+        auth_request /kill;
+        proxy_pass $crondata_grafana;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+     }
